Fitted the smaller images to a larger size to prevent boxes wrapping

--- a/webroot/scss/partials/_units.scss
+++ b/webroot/scss/partials/_units.scss
@@ -68,7 +68,7 @@ div.unit-card {
     border-top-right-radius: 5px;
   }
   div.sprite {
-    min-height: 100px;
+    min-height: 105px;
   }
   table {
     width: 90%;
